--- a/debug/org.eclipse.cdt.debug.ui/plugin.properties
+++ b/debug/org.eclipse.cdt.debug.ui/plugin.properties
@@ -229,3 +229,11 @@ OpenNewView.name = Open New View
 
 # Disassembly Ruler Column extension point
 extPoint.disassemblyRulerColumn=Disassembly Ruler Column
+
+RemoveExpressionAction.label=Rem&ove
+RemoveExpressionAction.tooltip=Remove Selected Expressions
+
+DeselectExpressionWorkingSetsAction.label=Deselect Working Sets
+DeselectExpressionWorkingSetsAction.tooltip=Deselect Expression Working Sets shown in Expression View
+DefineWorkingSetsAction.label=Define Working Sets ...
+DefineWorkingSetsAction.tooltip=Define Expression Working Sets
