--- a/debug/org.eclipse.cdt.debug.ui/plugin.xml
+++ b/debug/org.eclipse.cdt.debug.ui/plugin.xml
@@ -1064,7 +1064,42 @@
                style="push"
                toolbarPath="pinGroup">
          </action>
+         <action
+               id="org.eclipse.cdt.debug.ui.RemoveSelectedExpressions"
+               toolbarPath="expressionGroup"
+               hoverIcon="icons/elcl16/remove_expression.gif"
+               class="org.eclipse.cdt.debug.internal.ui.expression.actions.RemoveExpressionAction"
+               disabledIcon="icons/dlcl16/remove_expression_disabled.gif"
+               icon="icons/elcl16/remove_expression.gif"
+               helpContextId="remove_expression_action_context"
+               label="%RemoveExpressionAction.label"
+               tooltip="%RemoveExpressionAction.tooltip">
+            <selection
+                  class="org.eclipse.debug.core.model.IExpression">
+            </selection>
+            <selection
+                  class="org.eclipse.debug.core.model.IVariable">
+            </selection>
+         </action>         
       </viewContribution>
+         <viewContribution
+            targetID="org.eclipse.debug.ui.ExpressionView"
+            id="org.eclipse.cdt.debug.ui.expression.workingSetActions">
+            <action
+               class="org.eclipse.cdt.debug.internal.ui.expression.actions.DeselectWorkingSetAction"
+               id="org.eclipse.cdt.debug.internal.ui.expression.actions.DeselectWorkingSetAction"
+               label="%DeselectExpressionWorkingSetsAction.label"
+               menubarPath="additions"
+               style="push"
+               tooltip="%DeselectExpressionWorkingSetsAction.tooltip"/>
+            <action
+               class="org.eclipse.cdt.debug.internal.ui.expression.actions.DefineWorkingSetAction"
+               id="org.eclipse.cdt.debug.internal.ui.expression.actions.DefineWorkingSetAction"
+               label="%DefineWorkingSetsAction.label"
+               menubarPath="additions"
+               style="push"
+               tooltip="%DefineWorkingSetsAction.tooltip"/>
+         </viewContribution>
       <viewContribution
             id="org.eclipse.cdt.debug.ui.variable.toolbar"
             targetID="org.eclipse.debug.ui.VariableView">
@@ -2533,6 +2568,35 @@
             </with>
         </activeWhen>
     </handler>
+    </extension>
+
+   	<extension 
+        point = "org.eclipse.ui.elementFactories"> 
+        <factory 
+           id ="org.eclipse.cdt.debug.ui.expressions.ExpressionFactory" 
+           class="org.eclipse.cdt.debug.ui.expressions.ExpressionFactory"> 
+        </factory> 
+    </extension> 
+
+  <extension
+ 	point="org.eclipse.core.runtime.adapters">
+ 	<factory
+ 		adaptableType="org.eclipse.debug.core.model.IExpression"
+ 		class="org.eclipse.cdt.debug.ui.expressions.ExpressionPersistableElementAdapterFactory">
+ 		<adapter
+ 			type="org.eclipse.ui.IPersistableElement"/>
+ 	</factory>
+  </extension>
+
+    <extension
+          point="org.eclipse.ui.workingSets">
+       <workingSet
+             description="Expression workingset is used to group expressions together"
+             elementAdapterClass="org.eclipse.cdt.debug.internal.ui.expression.workingsets.ExpressionWorkingSetElementAdapter"
+             id="org.eclipse.cdt.debug.ui.expressionWorkingSets"
+             name="Expression"
+             icon="icons/elcl16/expression_workingset.gif"
+             pageClass="org.eclipse.cdt.debug.internal.ui.expression.workingsets.ExpressionWorkingSetPage"/>
     </extension>
     
 </plugin>
